# lisa-on-gpu

./: CMakeLists.txt  CONTRIBUTORS.md  GeometricProjections.cu  GeometricProjections.hh  LISAOnGPU.pyx  MANIFEST.in  README.md  VariableFractionalDelay.cu  dev_wavelet.py  gb_like.py  pyproject.toml  requirements.txt  response.py  setup.py  test_run.py  variable_fractional_delay.py
.github/workflows/: pages.yml  publish.yml  run-tests.yml
docs/doctrees/: README.doctree  environment.pickle  fast_LISA_response_tutorial.doctree  index.doctree
docs/doctrees/nbsphinx/: fast_LISA_response_tutorial.ipynb
docs/doctrees/user/: main.doctree
docs/html/: .buildinfo  README.html  fast_LISA_response_tutorial.html  fast_LISA_response_tutorial.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: README.rst.txt  fast_LISA_response_tutorial.ipynb.txt  index.rst.txt
docs/html/_sources/user/: main.rst.txt
docs/html/user/: main.html
docs/source/: README.rst  conf.py  fast_LISA_response_tutorial.ipynb  index.rst
docs/source/user/: main.rst
examples/: fast_LISA_response_tutorial.ipynb
fastlisaresponse/: __init__.py  response.py
fastlisaresponse/cutils/src/: LISAResponse.cu  responselisa.pyx
fastlisaresponse/tests/: test_fastlisaresponse.py
fastlisaresponse/utils/: utility.py
include/: LISAResponse.hh
orbit_files/: equalarmlength-trailing-fit.h5  esa-trailing-orbits.h5
scripts/: prebuild.py
src/: CMakeLists.txt  LISAResponse.cu  responselisa.pyx
src/fastlisaresponse/: CMakeLists.txt  __init__.py  _editable.py  _version.py  gbcomps.py  git_version.py.in  response.py  tdiconfig.py  tdionfly.py
src/fastlisaresponse/cutils/: CMakeLists.txt  LISAResponse.cu  LISAResponse.hh  TDIonTheFly.cu  TDIonTheFly.hh  __init__.py  binding.cxx  binding.hpp  binding_flr.cxx  binding_flr.hpp  binding_tof.cxx  binding_tof.hpp  lisatdionthefly.pyx  pybind11_cuda_array_interface.hpp  responselisa.pyx
src/fastlisaresponse/cutils/include/: LISAResponse.hh
src/fastlisaresponse/utils/: __init__.py  citations.py  config.py  exceptions.py  parallelbase.py
tests/: test_cubic_spline.py  test_fastlisaresponse.py  test_tdi_on_the_fly.py
